--- a/Groecery-list/style.css
+++ b/Groecery-list/style.css
@@ -6,12 +6,13 @@
 
 body{
     font-family: "Mumblers Demo";
-    background-color: #17181a;
-    /* background-color: #fff; */
+    background-color: #fff;
     color: #ff9500;
 }
 
 .container{
+    display: flex;
+    justify-content: center;
     width: 90%;
     min-height: 100vh;
     height: 100vh;
@@ -19,14 +20,16 @@ body{
 
 
 .groce-container{
-    margin-top: 2rem;
+    
+    margin:2rem 0 ;
     padding: 1rem;
-    background-color: #222427;
-    min-height: 100vh;
-    /* height:56rem ; */
+    background-color: #e9f0f4;
+    height: auto;
+    /* height: 800px; */
     box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
     border: none;
     text-align: center;
+    border-radius: 21px;
 }
 h1{
     padding-top: .4rem;
@@ -45,7 +48,7 @@ input{
     border: none;
     border-radius: 30px;
     padding: .5rem .3rem .5rem 1rem;
-    padding-left: 1rem;
+    /* padding-left: 1rem; */
     /* background-color: transparent; */
 }
 i{
@@ -56,4 +59,82 @@ i{
 .groce-items h2{
     text-align: left;
     margin-left: 2rem;
+}
+.msg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.message{
+    width: 300px;
+    min-width: 200px;
+    position: fixed;
+    top: 2rem;
+    left: 45%;
+    background-color: #2ec973;
+    color: #fff;
+    border-radius:7px ;
+    border: none;
+    padding: 2rem;
+    text-align: center;
+    visibility: hidden;
+}
+
+.message.show{
+    visibility: visible;
+    -webkit-animation: slidein .5s, slideout 1s 3.5s;
+    animation: slidein .5s, slideout 1s 3.5s;
+}
+
+@-webkit-keyframes slidein{
+    from{top: 0; opacity: 0;}
+    to{top: 2rem; opacity: 1;}
+}
+
+@keyframes slidein{
+    from{top: 0; opacity: 0;}
+    to{top: 2rem; opacity: 1;}
+}
+
+@-webkit-keyframes slideout{
+    from{top: 2rem; opacity: 1;}
+    to{top: 0; opacity: 0;}
+}
+@keyframes slideout{
+    from{top: 2rem; opacity: 1;}
+    to{top: 0; opacity: 0;}
+}
+
+
+
+
+@media(max-width:500px){
+    h1{
+        font-size: 2rem;
+    }
+    .groce-container img{
+        width: 120px;
+        padding-bottom: 1rem;
+    }
+    
+    
+    input{
+        width: 85%;
+        font-size: 1.5rem;
+    }
+    i{
+        font-size: 2rem;
+        cursor: pointer;
+    }
+
+    .message{
+        margin: auto -30%;
+        width: 300px;
+        position: fixed;
+        top: 2rem;
+        /* left: 4rem; */
+        padding: 1.5rem;
+        /* visibility: hidden; */
+    }
 }
